# prompt-injection-for-good

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_web_ui.py  setup.py
.github/workflows/: docker-build.yml
scripts/: bulk_prompt_assignment.py  generate_documents.py  migrate_add_prompt_hash.py  prompt_extraction_utility.py
src/: main.py
src/core/: async_evaluator.py  batch_evaluator.py  config_parser.py  evaluator.py  file_handler.py  reference_manager.py
src/database/: models.py  operations.py
src/document_generator/: __init__.py  core.py
src/evaluation/: __init__.py  analytics.py  confidence.py  human_review.py  judge.py  semantic_scorer.py
src/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py  together_provider.py
src/utils/: cli.py
src/web/: app.py
src/web/static/: bootstrap-theme.css  brand-colors.css  documents.js
src/web/templates/: base.html  documents.html  home.html  index.html  results.html  security_bulk.html
